gccida/c1/recog_28
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38624:10: error: conflicting types for 'recog_28'
__int64  recog_28( rtx x0, rtx insn, int *pnum_clobbers) 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38160:12: note: previous declaration is here
static int recog_28 PARAMS ((rtx, rtx, int *));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38750:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[5] = v8; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38754:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v9; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38758:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v10; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38762:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[4] = v11; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38777:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v15; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38786:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v17; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38790:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v18; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38813:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = ( rtx)v23; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38817:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v24; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38824:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( recog_data_0.operand[1] = v27, v28 = *( _QWORD *)( v26 + 16), ( *( _DWORD *)v28 & 0xFFFFFF) != 327760) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38825:39: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( *( rtx *)( v28 + 8), recog_data_0.operand[2]) ) 
                                      ^~~~~~~~~~~~
                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38837:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v23; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38841:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v88; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38848:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v90; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38852:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v91 + 8), recog_data_0.operand[1]) ) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38854:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v91 + 16), recog_data_0.operand[2]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38862:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[4] = v93; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/insn-recog.c:38882:42: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v29 = rtx_equal_p( *( rtx *)( v28 + 16), recog_data_0.operand[3]); 
                                         ^~~~~~~~~~~~
                                         recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/recog_28/src/obj/insn-recog.o] Error 1
